--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <exec.mainClass>com.mycompany.project_ams.Project_AMS</exec.mainClass>
+        <exec.mainClass>com.mycompany.project_ams.Project_AMS</exec.mainClass>  
     </properties>
+    <dependencies>
+  <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.33</version>
+  </dependency>
+</dependencies>
+
 </project>
