--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,26 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.33</version>
   </dependency>
+  <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.2</version>
+    <scope>test</scope>
+  </dependency>
 </dependencies>
-
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.0.0-M5</version>
+      <configuration>
+        <includes>
+          <include>**/*Test.java</include>
+          <include>**/*Tests.java</include>
+        </includes>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
